--- a/LeerExcel/EtiquetasHoja.rdlc
+++ b/LeerExcel/EtiquetasHoja.rdlc
@@ -6,7 +6,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>4.2cm</Width>
+              <Width>4.2598cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -28,6 +28,7 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -37,7 +38,8 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Height>0.41479cm</Height>
+                          <Top>0.03528cm</Top>
+                          <Height>0.30896cm</Height>
                           <Width>4.2cm</Width>
                           <Style>
                             <Border>
@@ -45,8 +47,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                         <Textbox Name="Textbox15">
@@ -60,6 +60,7 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -69,8 +70,8 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>0.41479cm</Top>
-                          <Height>0.4441cm</Height>
+                          <Top>0.37951cm</Top>
+                          <Height>0.33827cm</Height>
                           <Width>4.2cm</Width>
                           <ZIndex>1</ZIndex>
                           <Style>
@@ -79,8 +80,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                         <Textbox Name="Textbox16">
@@ -94,6 +93,7 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -103,8 +103,8 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>0.89417cm</Top>
-                          <Height>0.44125cm</Height>
+                          <Top>0.75306cm</Top>
+                          <Height>0.33542cm</Height>
                           <Width>4.2cm</Width>
                           <ZIndex>2</ZIndex>
                           <Style>
@@ -113,8 +113,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                         <Textbox Name="Textbox17">
@@ -128,6 +126,7 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -137,8 +136,9 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>1.37069cm</Top>
-                          <Height>0.40597cm</Height>
+                          <Top>1.08848cm</Top>
+                          <Left>0.0598cm</Left>
+                          <Height>0.31778cm</Height>
                           <Width>4.2cm</Width>
                           <ZIndex>3</ZIndex>
                           <Style>
@@ -147,8 +147,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                         <Textbox Name="Textbox18">
@@ -162,19 +160,20 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Left</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>1.77666cm</Top>
-                          <Left>1.98438cm</Left>
-                          <Height>0.44125cm</Height>
-                          <Width>1.92458cm</Width>
+                          <Top>1.40625cm</Top>
+                          <Left>2.54512cm</Left>
+                          <Height>0.33542cm</Height>
+                          <Width>1.55416cm</Width>
                           <ZIndex>4</ZIndex>
                           <Style>
                             <Border>
@@ -182,8 +181,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                         <Textbox Name="Textbox20">
@@ -197,6 +194,7 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -206,10 +204,10 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>2.25319cm</Top>
-                          <Left>1.19062cm</Left>
-                          <Height>0.43067cm</Height>
-                          <Width>3.00938cm</Width>
+                          <Top>1.74167cm</Top>
+                          <Left>0.0598cm</Left>
+                          <Height>0.28736cm</Height>
+                          <Width>4.1402cm</Width>
                           <ZIndex>5</ZIndex>
                           <Style>
                             <Border>
@@ -217,8 +215,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                         <Textbox Name="Textbox19">
@@ -232,6 +228,7 @@
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -241,10 +238,10 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>1.77666cm</Top>
+                          <Top>1.40625cm</Top>
                           <Left>0.0598cm</Left>
-                          <Height>0.44125cm</Height>
-                          <Width>1.92458cm</Width>
+                          <Height>0.33542cm</Height>
+                          <Width>1.42187cm</Width>
                           <ZIndex>6</ZIndex>
                           <Style>
                             <Border>
@@ -252,34 +249,31 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <Textbox Name="Textbox21">
+                        <Textbox Name="Textbox1">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!ID_VENTANA.Value</Value>
+                                  <Value>CORTE: </Value>
                                   <Style>
                                     <FontFamily>Arial Black</FontFamily>
                                     <FontSize>5pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style>
-                                <TextAlign>Center</TextAlign>
-                              </Style>
+                              <Style />
                             </Paragraph>
                           </Paragraphs>
-                          <rd:DefaultName>Textbox14</rd:DefaultName>
-                          <Top>2.25319cm</Top>
-                          <Left>0.09506cm</Left>
-                          <Height>0.43067cm</Height>
-                          <Width>1.025cm</Width>
+                          <rd:DefaultName>Textbox1</rd:DefaultName>
+                          <Top>1.44153cm</Top>
+                          <Left>1.48167cm</Left>
+                          <Height>0.30014cm</Height>
+                          <Width>1.02817cm</Width>
                           <ZIndex>7</ZIndex>
                           <Style>
                             <Border>
@@ -287,8 +281,6 @@
                             </Border>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
                       </ReportItems>
@@ -319,7 +311,7 @@
         </TablixRowHierarchy>
         <DataSetName>dataSetVentana</DataSetName>
         <Height>2.68386cm</Height>
-        <Width>4.2cm</Width>
+        <Width>4.2598cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -330,7 +322,7 @@
     <Height>11.38416in</Height>
     <Style />
   </Body>
-  <Width>1.67855in</Width>
+  <Width>1.67709in</Width>
   <Page>
     <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
